   from your list. (a "Baseshape" is a variation which creates a shape/fractal on its own, like "square")
 - Introducing the first version of an official user manual. It can be reached from within the program under the
   "Help -> User manual" or in the file system inside the lib-subfolder (JWildfire_manual.pdf).
   Thanks to Brad Stefanov, Nancy Pierce, my wife Patricia Maschke and Rick Sidwell for reviewing it!
   The latest version of the manual can also be displayed directly on GitHub: https://github.com/thargor6/JWildfire/blob/master/manual/src/docs/asciidoc/JWildfire_manual.adoc
 - ply/PointCloud-export now generates two additional fields: pscale and intensity
 - started to create an official manual (AsciiDoc-based for simple editing)
 - new property tinaDefaultNewFlameTitle where you can set a default flame title which is assigned when you
   create a new flame by using the "New from Scratch"-button
 - folder-parameters in the Preferences (e.g. gradient-folder) can now be entered manually or selected by using a folder-dialog
 - added Alt-F shortcut for Fine edit, by Rick Sidwell
 - new variations
     -bulge,
     -fresnel,
     -tunnel,
     -kaleidoimg,
     -dc_portal,
     -kaplan,
     -dc_gmandelbroot by by Jesus Sosa
     -crop_mandelbulb3d,
     -crop_mandelbox3d by Whittaker Courtney
     -post_aexion_crop,
     -post_benesi_crop,
     -post_asurf_crop,
     -post_bristorbrot_crop,
     -post_bulbtorus_crop,
     -post_coastalbrot_crop by by Jesus Sosa
 - new internal scripts
     - "Tile Maker" (which is a whole family of scripts) by Missy Gainer
     - "Yummy Gnarls" by Brad Stefanov
 - improved the "Affine3D"-random-flame-generator
 - slightly improved the speed of "glsl_"- and similar variations
 - slightly improved the speed when chosing a random variation (from within a random-flame-generator or Mutation)
 - moved the "ZBuffer"-subtab from the "DOF / Bokeh"-tab to the "3D rendering"-tab